fixed layout issues

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -35,7 +35,7 @@ core-toolbar > a {
 
 .section {
 	margin: auto;
-	margin-top: 15px;
+	margin-top: 30px;
 	max-width: 300px;
 	padding: 10px;
 }
